# Ariel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/camera/: camera.cpp  camera.hpp  cameralist.hpp
src/camera/perspcam/: perspcam.cpp  perspcam.hpp
src/geom/: box.cpp  box.hpp  cube.cpp  cube.hpp  cubegen.cpp  cubegen.hpp  geom.cpp  geom.hpp  geom.inl  geomlist.hpp  mesh.cpp  mesh.hpp  meshgen.hpp  sphere.cpp  sphere.hpp  spheregen.cpp  spheregen.hpp
src/geom_old/: box.hpp  sphere.cpp  sphere.hpp
src/grid/: floatgrid.cpp  floatgrid.hpp  grid.hpp  grid.inl  gridutils.inl  intgrid.cpp  intgrid.hpp  levelset.cpp  levelset.hpp  macgrid.inl  particlegrid.cpp  particlegrid.hpp
src/math/: kernels.inl
src/ray/: ray.cpp  ray.hpp
src/scene/: scene.cpp  scene.hpp  sceneloader.cpp  sceneloader.hpp
src/sim/: flip.cpp  flip.hpp  particlegridoperations.inl  particlegridsplat.inl  particleresampler.inl  solver.inl
src/spatial/: aabb.cpp  aabb.hpp  bvh.hpp  bvh.inl  spatial.cpp  spatial.hpp
src/utilities/: datastructures.hpp  loopvector.inl  multiqueue.inl  shortstack.inl  utilities.h  utilities.inl
src/viewer/: viewer.cpp  viewer.hpp
